--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,9 @@
             <section class="uk-grid uk-grid-match" data-uk-grid-margin="">
                 <div class="uk-width-medium-1-1">
                     <div class="uk-panel uk-text-center">
-                        <div class="uk-text-meta">
+                        <marquee class="uk-text-meta">
                             ベテランエンジニアが"生存戦略"をとことん語り尽くすカンファレンス
-                        </div>
+                        </marquee>
                         <h3 class="uk-margin-small-top">エンジニアがこの<span class="uk-text-bold" style="font-size:2rem">先生</span>きのこるためのカンファレンス2025</h3>
                         <p class="uk-margin-large">
                             <span class="uk-text-meta">前夜祭</span> <span class="uk-text-lead">2025年3月8日(土)</span>
