--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,21 @@
     <head>
         <title>きのこカンファレンス2025</title>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="「エンジニアがこの先生きのこるためのカンファレンス」は、参加される方がそれぞれのキャリアやロードマップを見つめ直し、自身の未来を描くヒントを得ることを目的に開催するITカンファレンスです。" />
+        <meta name="keywords" content="きのこカンファレンス, ITカンファレンス, ITエンジニア, 生存戦略" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="きのこカンファレンス2025" />
+        <meta property="og:url" content="https://kinoko-conf.dev/" />
+        <meta property="og:description" content="「エンジニアがこの先生きのこるためのカンファレンス」は、参加される方がそれぞれのキャリアやロードマップを見つめ直し、自身の未来を描くヒントを得ることを目的に開催するITカンファレンスです。" />
+        <meta property="og:image" content="https://fortee.jp/files/kinoko-2025/image/banner.png" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:creator" content="@kinoko_conf" />
+        <meta property="twitter:title" content="きのこカンファレンス2025" />
+        <meta property="twitter:description" content="「エンジニアがこの先生きのこるためのカンファレンス」は、参加される方がそれぞれのキャリアやロードマップを見つめ直し、自身の未来を描くヒントを得ることを目的に開催するITカンファレンスです。" />
+        <meta property="twitter:image" content="https://fortee.jp/files/kinoko-2025/image/banner.png" />
         <link rel="stylesheet" href="css/uikit.min.css" />
         <link rel="stylesheet" href="css/app.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=BIZ+UDPGothic">
