--- a/public/index.html
+++ b/public/index.html
@@ -48,20 +48,25 @@
             </div>
         </div>
         <!-- hero -->
-        <header class="hero-header uk-block uk-block-large uk-flex uk-flex-middle uk-height-viewport">
+        <header class="hero-header uk-block uk-block-large uk-flex uk-flex-middle uk-flex-stretch uk-height-viewport">
             <div class="uk-container uk-container-center uk-light">
             <section class="uk-grid uk-grid-match" data-uk-grid-margin="">
                 <div class="uk-width-medium-1-1">
                     <div class="uk-panel uk-text-center">
                         <marquee class="uk-text-meta">
-                            ベテランエンジニアが"生存戦略"をとことん語り尽くすカンファレンス
+                            ベテランエンジニアが"生存戦略"をとことん語り尽くすカンファレンス🍄
                         </marquee>
                         <h3 class="uk-margin-small-top">エンジニアがこの<span class="uk-text-bold" style="font-size:2rem">先生</span>きのこるためのカンファレンス2025</h3>
-                        <p class="uk-margin-large">
-                            <span class="uk-text-meta">前夜祭</span> <span class="uk-text-lead">2025年3月8日(土)</span>
-                            <span class="uk-text-meta">/</span>
-                            <span class="uk-text-meta">本編</span> <span class="uk-text-lead">2025年3月9日(日)</span>
-                        </p>
+                        <div class="uk-margin-large uk-grid-divider uk-child-width-expand@s" uk-grid>
+                            <div class="uk-text-nowrap">
+                                <span class="uk-text-meta">前夜祭</span>
+                                <span class="uk-text-lead">2025年3月8日(土)</span>
+                            </div>
+                            <div class="uk-text-nowrap">
+                                <span class="uk-text-meta">本編</span>
+                                <span class="uk-text-lead">2025年3月9日(日)</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -95,63 +100,89 @@
                     </p>
                 </div>
             </div>
-            <div class="uk-section">
+            <div class="uk-section uk-padding-remove-bottom">
                 <div class="uk-container">
                     <h3>Event</h3>
-                    <table class="event-table uk-table uk-table-divider">
-                        <tbody>
-                            <tr>
-                                <td class="uk-table-shrink uk-text-nowrap">イベント名</td>
-                                <td>エンジニアがこの先生きのこるためのカンファレンス2025</td>
-                            </tr>
-                            <tr>
-                                <td class="uk-table-shrink uk-text-nowrap">主催団体</td>
-                                <td>きのこカンファレンス実行委員会（任意団体）</td>
-                            </tr>
-                            <tr>
-                                <td class="uk-table-shrink uk-text-nowrap">開催日時</td>
-                                <td>
-                                    <span>【前夜祭】</span>2025年3月8日(土)<br>
-                                    <span>【本編】</span>2025年3月9日(日)<br>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="uk-table-shrink uk-text-nowrap">開催場所</td>
-                                <td>docomo R&D OPENLAB ODAIBA</td>
-                            </tr>
-                            <tr>
-                                <td class="uk-table-shrink uk-text-nowrap">アクセス</td>
-                                <td>
-                                    <span uk-icon="location"></span>
-                                    東京都港区台場2-3-2 台場フロンティアビル12F ( <a target="_blank" rel="noreferrer noopener" href="https://maps.app.goo.gl/PwR1NgALgWKwgMpf8">map</a> )<br>
-                                    ゆりかもめ「お台場海浜公園」駅より徒歩1分<br>
-                                    りんかい線「東京テレポート」駅より徒歩3分<br>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="uk-table-shrink uk-text-nowrap">情報発信</td>
-                                <td>
-                                    <span uk-icon="x"></span> <a target="_blank" rel="noreferrer noopener" href="https://x.com/kinoko_conf">@kinoko_conf</a><br>
-                                    <span uk-icon="file-edit"></span> <a target="_blank" rel="noreferrer noopener" href="https://note.com/kinoko_conf/m/m5e1e257d47c2">ブログ</a><br>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.961651940186!2d139.77519297615365!3d35.62867187260439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188907cb60ac6f%3A0x75c6cf763e298d6b!2sdocomo%20R%26D%20OPEN%20LAB%20ODAIBA!5e0!3m2!1sja!2sjp!4v1696989481550!5m2!1sja!2sjp"
-                        width="100%"
-                        height="450"
-                        style="border: 0"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"
-                    ></iframe>
+                    <div class="uk-margin-large-bottom">
+                        <table class="event-table uk-table uk-table-divider">
+                            <tbody>
+                                <tr>
+                                    <td class="uk-table-shrink uk-text-nowrap">イベント名</td>
+                                    <td>エンジニアがこの先生きのこるためのカンファレンス2025</td>
+                                </tr>
+                                <tr>
+                                    <td class="uk-table-shrink uk-text-nowrap">主催団体</td>
+                                    <td>きのこカンファレンス実行委員会（任意団体）</td>
+                                </tr>
+                                <tr>
+                                    <td class="uk-table-shrink uk-text-nowrap">開催日時</td>
+                                    <td>
+                                        <span>【前夜祭】</span>2025年3月8日(土)<br>
+                                        <span>【本編】</span>2025年3月9日(日)<br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="uk-table-shrink uk-text-nowrap">開催場所</td>
+                                    <td>docomo R&D OPENLAB ODAIBA</td>
+                                </tr>
+                                <tr>
+                                    <td class="uk-table-shrink uk-text-nowrap">収容人数</td>
+                                    <td>最大300人（関係者を含む）</td>
+                                </tr>
+                                <tr>
+                                    <td class="uk-table-shrink uk-text-nowrap">アクセス</td>
+                                    <td>
+                                        <span uk-icon="location"></span>
+                                        東京都港区台場2-3-2 台場フロンティアビル12F ( <a target="_blank" rel="noreferrer noopener" href="https://maps.app.goo.gl/PwR1NgALgWKwgMpf8">map</a> )<br>
+                                        ゆりかもめ「お台場海浜公園」駅より徒歩1分<br>
+                                        りんかい線「東京テレポート」駅より徒歩3分<br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="uk-table-shrink uk-text-nowrap">情報発信</td>
+                                    <td>
+                                        <span uk-icon="x"></span> <a target="_blank" rel="noreferrer noopener" href="https://x.com/kinoko_conf">@kinoko_conf</a><br>
+                                        <span uk-icon="file-edit"></span> <a target="_blank" rel="noreferrer noopener" href="https://note.com/kinoko_conf/m/m5e1e257d47c2">ブログ</a><br>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.961651940186!2d139.77519297615365!3d35.62867187260439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188907cb60ac6f%3A0x75c6cf763e298d6b!2sdocomo%20R%26D%20OPEN%20LAB%20ODAIBA!5e0!3m2!1sja!2sjp!4v1696989481550!5m2!1sja!2sjp"
+                    width="100%"
+                    height="450"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+            </div>
+            <div class="uk-section">
+                <div class="uk-container">
+                    <h3>Schedule</h3>
+                    <ul class="uk-list">
+                        <li>スポンサー募集は2024年8月ごろを予定しています</li>
+                        <li>スピーカー募集は2024年9月ごろを予定しています</li>
+                    </ul>
                 </div>
             </div>
         </main>
         <!-- footer -->
         <footer>
             <div class="footer-cover uk-background-secondary">
+                <div class="uk-container">
+                    <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
+                        <div class="uk-navbar-left">
+                            <ul class="uk-navbar-nav">
+                                <li><a target="_blank" rel="noreferrer noopener" href="https://esa-pages.io/p/sharing/21602/posts/24/263aa773b3944b4f9bc5.html">行動規範</a></li>
+                                <li><a target="_blank" rel="noreferrer noopener" href="https://esa-pages.io/p/sharing/21602/posts/25/0a07c89d23f57777738f.html">プライバシーポリシー</a></li>
+                                <li><a target="_blank" rel="noreferrer noopener" href="https://x.com/kinoko_conf">公式Xアカウント</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
                 <div class="uk-container">
                     <div class="uk-text-meta">
                         &copy; <a target="_blank" rel="noreferrer noopener" href="https://x.com/kinoko_conf">きのこカンファレンス実行委員会</a>
