add hidden kinoko

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
             <div class="uk-container uk-container-expand uk-light">
                 <nav class="uk-navbar" uk-navbar>
                     <div class="uk-navbar-left">
-                        <a href="/" class="uk-navbar-item uk-logo">きのこカンファレンス2025</a>
+                        <a href="/" class="uk-navbar-item uk-logo">きのこカンファレンス2025<span style="color:transparent;">🍄</span></a>
                     </div>
                     <div class="uk-navbar-right">
                     </div>
@@ -54,9 +54,9 @@
                 <div class="uk-width-medium-1-1">
                     <div class="uk-panel uk-text-center">
                         <marquee class="uk-text-meta">
-                            ベテランエンジニアが"生存戦略"をとことん語り尽くすカンファレンス🍄
+                            ベテランエンジニアが"生存戦略"をとことん語り尽くすカンファレンス
                         </marquee>
-                        <h3 class="uk-margin-small-top">エンジニアがこの<span class="uk-text-bold" style="font-size:2rem">先生</span>きのこるためのカンファレンス2025</h3>
+                        <h2 class="uk-margin-small-top">エンジニアがこの<span class="uk-text-bold" style="font-size:2.5rem">先生</span>きのこるためのカンファレンス2025</h2>
                         <div class="uk-margin-large uk-grid-divider uk-child-width-expand@s" uk-grid>
                             <div class="uk-text-nowrap">
                                 <span class="uk-text-meta">前夜祭</span>
