--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
         <link rel="stylesheet" href="css/uikit.min.css" />
         <link rel="stylesheet" href="css/app.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=BIZ+UDPGothic">
+        <link rel="apple-touch-icon" sizes="500x500" href="/image/apple-touch-icon.png">
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
     </head>
