--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <meta name="twitter:image" content="https://fortee.jp/files/kinoko-2025/image/banner.png" />
         <link rel="stylesheet" href="css/uikit.min.css" />
         <link rel="stylesheet" href="css/app.css" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=BIZ+UDPGothic">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=BIZ+UDPGothic|Montserrat">
         <link rel="apple-touch-icon" sizes="500x500" href="/image/apple-touch-icon.png">
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
