fix navbar container

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <body>
         <!-- navbar -->
         <div class="topbar uk-navbar-container uk-sticky uk-sticky-below uk-sticky-fixed" uk-sticky="media:960; target-offset:0;">
-            <div class="uk-container uk-container-expand uk-light">
+            <div class="uk-container uk-light">
                 <nav class="uk-navbar" uk-navbar>
                     <div class="uk-navbar-left">
                         <a href="/" class="uk-navbar-item uk-logo">きのこカンファレンス2025<span style="color:transparent;">🍄</span></a>
