--- a/public/index.html
+++ b/public/index.html
@@ -50,26 +50,26 @@
         <!-- hero -->
         <header class="hero-header uk-block uk-block-large uk-flex uk-flex-middle uk-flex-stretch uk-height-viewport">
             <div class="uk-container uk-container-center uk-light">
-            <section class="uk-grid uk-grid-match" data-uk-grid-margin="">
-                <div class="uk-width-medium-1-1">
-                    <div class="uk-panel uk-text-center">
-                        <marquee class="uk-text-meta">
-                            ベテランエンジニアが"生存戦略"をとことん語り尽くすカンファレンス🍄
-                        </marquee>
+                <section class="uk-grid uk-grid-match" data-uk-grid-margin="">
+                    <div class="uk-width-medium-1-1">
+                        <div class="uk-panel uk-text-center">
+                            <marquee class="uk-text-meta">
+                                ベテランエンジニアが"生存戦略"をとことん語り尽くすカンファレンス🍄
+                            </marquee>
                         <h3 class="uk-margin-small-top">エンジニアがこの<span class="uk-text-bold" style="font-size:2rem">先生</span>きのこるためのカンファレンス2025</h3>
-                        <div class="uk-margin-large uk-grid-divider uk-child-width-expand@s" uk-grid>
-                            <div class="uk-text-nowrap">
-                                <span class="uk-text-meta">前夜祭</span>
-                                <span class="uk-text-lead">2025年3月8日(土)</span>
-                            </div>
-                            <div class="uk-text-nowrap">
-                                <span class="uk-text-meta">本編</span>
-                                <span class="uk-text-lead">2025年3月9日(日)</span>
+                            <div class="uk-margin-large uk-grid-divider uk-child-width-expand@s" uk-grid>
+                                <div class="uk-text-nowrap">
+                                    <span class="uk-text-meta">前夜祭</span>
+                                    <span class="uk-text-lead">2025年3月8日(土)</span>
+                                </div>
+                                <div class="uk-text-nowrap">
+                                    <span class="uk-text-meta">本編</span>
+                                    <span class="uk-text-lead">2025年3月9日(日)</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
+                </section>
             </div>
         </header>
         <!-- main content -->
@@ -167,6 +167,7 @@
                         <li>スピーカー募集は2024年9月ごろを予定しています</li>
                     </ul>
                 </div>
+                <a class="back_door" href="old_view.html">裏口</a>
             </div>
         </main>
         <!-- footer -->
