--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,20 @@
         <link rel="apple-touch-icon" sizes="500x500" href="/image/apple-touch-icon.png">
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
+        
+        <style>
+            a.back_door {
+                color: #f7f7f7;
+                text-decoration: none;
+                cursor: text;
+                float: right;
+            }
+
+            a.back_door:visited {
+                color: #f7f7f7;
+            }
+
+        </style>
     </head>
     <body>
         <!-- navbar -->
