--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
                         現役ITエンジニアをはじめ、デザイナーやマネージャーなど周辺職に就かれている方、ITエンジニアを目指す学生など、幅広い方にご参加いただけます。
                     </p>
                     <p>
-                        <a href="#" class="uk-button uk-button-default">より詳しい記事はこちら</a>
+                        <a href="https://note.com/ariakira/n/n928b430d99a2" class="uk-button uk-button-default">より詳しい記事はこちら</a>
                     </p>
                 </div>
             </div>
