--- a/public/old_view.html
+++ b/public/old_view.html
@@ -32,6 +32,7 @@
         <meta name="twitter:description"
             content="「エンジニアがこの先生きのこるためのカンファレンス」は、参加される方がそれぞれのキャリアやロードマップを見つめ直し、自身の未来を描くヒントを得ることを目的に開催するITカンファレンスです。" />
         <meta name="twitter:image" content="https://fortee.jp/files/kinoko-2025/image/banner.png" />
+        <link rel="icon" href="favicon.ico">
     </head>
     <style>
         body {
