--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <link rel="apple-touch-icon" sizes="500x500" href="/image/apple-touch-icon.png">
         <script src="js/uikit.min.js"></script>
         <script src="js/uikit-icons.min.js"></script>
+        <link rel="icon" href="favicon.ico">
         
         <style>
             a.back_door {
