--- a/public/old_view.html
+++ b/public/old_view.html
@@ -22,7 +22,7 @@
         <meta name="format-detection" content="telephone=no" />
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="きのこカンファレンス2025" />
-        <meta property="og:url" content="https://kinoko-conf.dev/" />
+        <meta property="og:url" content="https://kinoko-conf.dev/old_view" />
         <meta property="og:description"
             content="「エンジニアがこの先生きのこるためのカンファレンス」は、参加される方がそれぞれのキャリアやロードマップを見つめ直し、自身の未来を描くヒントを得ることを目的に開催するITカンファレンスです。" />
         <meta property="og:image" content="https://fortee.jp/files/kinoko-2025/image/banner.png" />
@@ -47,6 +47,7 @@
             display: inline-block;
             background: linear-gradient(to right, #e60000, #f39800, #fff100, #009944, #0068b7, #1d2088, #920783);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             font-size: 300%;
             font-weight: bold;
@@ -100,6 +101,11 @@
             footer li {
                 list-style: none;
             }
+        }
+
+        .contents_list li {
+            list-style: none;
+            margin-bottom: 1rem;
         }
 
     </style>
@@ -193,9 +199,19 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
 
+            <section>
+                <marquee behavior="alternate">
+                    <h3>Contents</h3>
+                </marquee>
+                <ul class="contents_list">
+                    <li><a href="./old_view/gallery.html">ギャラリー</a></li>
+                    <li>作成中</li>
+                </ul>
+            </section>
 
         </div>
         <footer>
+            <hr />
             <div>
                 <div>
                     <nav>
