スポンサー資料を別タブで開くように修正

--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
                     詳細は以下の資料をご覧ください。
                 </p>
                 <p>
-                    <a href="https://fortee.jp/kinoko-2025/go/sponsor-menu"
+                    <a href="https://fortee.jp/kinoko-2025/go/sponsor-menu" target="_blank" rel="noreferrer noopener"
                         class="uk-button uk-button-default">スポンサーメニューのご案内</a>
                 </p>
             </div>
