セッション募集開始

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,10 @@
                             <td class="uk-table-shrink uk-text-nowrap">2024年8月1日</td>
                             <td>スポンサー募集を開始しました</td>
                         </tr>
+                        <tr>
+                            <td class="uk-table-shrink uk-text-nowrap">2024年9月1日</td>
+                            <td>スピーカー募集を開始しました</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -188,9 +192,26 @@
         </div>
         <div class="uk-section">
             <div class="uk-container">
+                <h3>Speaker</h3>
+                <p>
+                    きのこカンファレンス2025でスピーカーをしてくださる方を募集しています。
+                    詳細はForteeをご確認ください。
+                </p>
+                <p>
+                    <a href="https://fortee.jp/kinoko-2025/speaker/callfor/main-session/callfor" target="_blank" rel="noreferrer noopener"
+                        class="uk-button uk-button-default">通常セッション募集</a>
+                </p>
+                <p>
+                    <a href="https://fortee.jp/kinoko-2025/speaker/callfor/unconference/callfor" target="_blank" rel="noreferrer noopener"
+                        class="uk-button uk-button-default">アンカンファレンステーマ募集</a>
+                </p>
+            </div>
+        </div>
+        <div class="uk-section">
+            <div class="uk-container">
                 <h3>Schedule</h3>
                 <ul class="uk-list">
-                    <li>スピーカー募集は2024年9月ごろを予定しています</li>
+                    <li>スピーカー募集を開始しました。募集終了は9/30を予定しています。</li>
                 </ul>
             </div>
             <a class="back_door" href="old_view.html">裏口</a>
