募集期限について記載

--- a/public/index.html
+++ b/public/index.html
@@ -194,8 +194,8 @@
             <div class="uk-container">
                 <h3>Speaker</h3>
                 <p>
-                    きのこカンファレンス2025でスピーカーをしてくださる方を募集しています。
-                    詳細はForteeをご確認ください。
+                    きのこカンファレンス2025でスピーカーをしてくださる方を募集しています。（～2024/9/30）<br>
+                    詳細は以下のFortee募集ページをご確認ください。
                 </p>
                 <p>
                     <a href="https://fortee.jp/kinoko-2025/speaker/callfor/main-session/callfor" target="_blank" rel="noreferrer noopener"
