--- a/public/index.html
+++ b/public/index.html
@@ -228,6 +228,10 @@
                     <a href="https://fortee.jp/kinoko-2025/go/sponsor-menu" target="_blank" rel="noreferrer noopener"
                         class="uk-button uk-button-default">スポンサーメニューのご案内</a>
                 </p>
+                
+                <div class="uk-grid-small uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid id="sponsor-list">
+                    <!-- スポンサー情報 -->
+                </div>
             </div>
         </div>
         <div class="uk-section">
