最低限のデザイン調整

--- a/public/index.html
+++ b/public/index.html
@@ -229,7 +229,7 @@
                         class="uk-button uk-button-default">スポンサーメニューのご案内</a>
                 </p>
                 
-                <div class="uk-grid-small uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid id="sponsor-list">
+                <div id="sponsor-list">
                     <!-- スポンサー情報 -->
                 </div>
             </div>
