画像の差し替え、サイズ調整

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,22 @@
         a.back_door:visited {
             color: #f7f7f7;
         }
+        img.sponsors {
+            object-fit: contain;
+        }
+        img.sponsors.big {
+            max-width: 300px;
+            max-height: 300px;
+        }
+        img.sponsors.medium {
+            max-width: 150px;
+            max-height: 150px;
+        }
+        img.sponsors.small {
+            max-width: 100px;
+            max-height: 100px;
+        }
+
     </style>
 </head>
 
