スピーカー募集関係を修正

--- a/public/index.html
+++ b/public/index.html
@@ -210,25 +210,9 @@
             <div class="uk-container">
                 <h3>Speaker</h3>
                 <p>
-                    きのこカンファレンス2025でスピーカーをしてくださる方を募集しています。（～2024/9/30）<br>
-                    詳細は以下のFortee募集ページをご確認ください。
+                    きのこカンファレンス2025でスピーカー募集は終了しました。<br>
+                    開催までお待ち下さい。
                 </p>
-                <p>
-                    <a href="https://fortee.jp/kinoko-2025/speaker/callfor/main-session/callfor" target="_blank" rel="noreferrer noopener"
-                        class="uk-button uk-button-default">通常セッション募集</a>
-                </p>
-                <p>
-                    <a href="https://fortee.jp/kinoko-2025/speaker/callfor/unconference/callfor" target="_blank" rel="noreferrer noopener"
-                        class="uk-button uk-button-default">アンカンファレンステーマ募集</a>
-                </p>
-            </div>
-        </div>
-        <div class="uk-section">
-            <div class="uk-container">
-                <h3>Schedule</h3>
-                <ul class="uk-list">
-                    <li>スピーカー募集を開始しました。募集終了は9/30を予定しています。</li>
-                </ul>
             </div>
             <a class="back_door" href="old_view.html">裏口</a>
         </div>
