--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
             <div class="uk-container">
                 <h3>Speaker</h3>
                 <p>
-                    きのこカンファレンス2025でスピーカー募集は終了しました。<br>
+                    きのこカンファレンス2025でのスピーカー募集は終了しました。<br>
                     開催までお待ち下さい。
                 </p>
             </div>
