--- a/public/index.html
+++ b/public/index.html
@@ -225,12 +225,12 @@
         <div class="uk-section">
             <div class="uk-container uk-margin-top">
                 <h3 class="uk-heading-line"><span>運営スタッフ</span></h3>
-                <div class="uk-grid-small uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid id="staff-list">
-                    <!-- スタッフ情報 -->
+                <div class="uk-grid-small uk-child-width-1-2@s uk-child-width-1-3@m" uk-grid id="core-staff-list">
+                    <!-- 運営スタッフ情報 -->
                 </div>
                 <h3 class="uk-heading-line"><span>ボランティアスタッフ</span></h3>
                 <div class="uk-grid-small uk-child-width-1-2@s uk-child-width-1-5@m" uk-grid id="one-day-staff-list">
-                    <!-- スタッフ情報 -->
+                    <!-- ボランティアスタッフ情報 -->
                 </div>
             </div>
         </div>
