タイムテーブルへのリンクを追加

--- a/public/index.html
+++ b/public/index.html
@@ -174,8 +174,8 @@
                             <tr>
                                 <td class="uk-table-shrink uk-text-nowrap">開催日時</td>
                                 <td>
-                                    <span>【前夜祭】</span>2025年3月8日(土) <a href="https://kinoko.connpass.com/event/342872/" target="_blank">詳細はこちら</a><br>
-                                    <span>【本編】</span>2025年3月9日(日) <a href="https://kinoko.connpass.com/event/342113/" target="_blank">詳細はこちら</a><br>
+                                    <span>【前夜祭】</span>2025年3月8日(土) <a href="https://kinoko.connpass.com/event/342872/" target="_blank">詳細はこちら</a> （<a href="https://fortee.jp/kinoko-2025/timetable/2025-03-08" target="_blank">タイムテーブル</a>）<br>
+                                    <span>【本編】</span>2025年3月9日(日) <a href="https://kinoko.connpass.com/event/342113/" target="_blank">詳細はこちら</a> （<a href="https://fortee.jp/kinoko-2025/timetable/2025-03-09" target="_blank">タイムテーブル</a>）<br>
                                 </td>
                             </tr>
                             <tr>
