日本科学未来館様からのご指摘修正(開催場所修正)

--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
 
                         <tr>
                             <td>開催場所</td>
-                            <td>日本科学未来館</td>
+                            <td>日本科学未来館 7階 未来館ホール他</td>
                         </tr>
                         <tr>
                             <td>アクセス</td>
