## コンテンツ - きのこ2025のリンクを追加、作成中を削除 - css修正 ## 開催日程 - カーソルホバー時のCSS削除(リンクでないため)

--- a/public/index.html
+++ b/public/index.html
@@ -203,10 +203,10 @@
                 <h3>コンテンツ</h3>
                 <ul class="contents_list">
                     <a href="./old_view/gallery.html">
-                        <li>ギャラリー</li>
+                        <li>ギャラリー(工事中)</li>
                     </a>
-                    <a href="#">
-                        <li>作成中</li>
+                    <a href="./2025/index.html">
+                        <li>きのこカンファレンス2025</li>
                     </a>
                 </ul>
             </section>
