テーマリンクの追加

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,9 @@
                         今いる場所、<strong>「ここから」</strong>未来への歩みを始めませんか。<br><br>
 
                         ベテランエンジニアたちが語る、未来への道標。<br>
-                        あなたの「これから」を見つける、きっかけがここにあります。
+                        あなたの「これから」を見つける、きっかけがここにあります。<br><br>
+
+                        <a href="https://note.com/kii310/n/n96e2b1bf2637?magazine_key=m5e1e257d47c2" target="_blank" rel="noreferrer noopener" class="theme-link">テーマの詳細はこちら</a>
                     </p>
                 </div>
             </section>
