お知らせの更新

--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,10 @@
                 <table>
                     <tbody>
                         <tr>
+                            <td>2025/12/05</td>
+                            <td>テーマの詳細ブログへのリンクを追加しました。</td>
+                        </tr>
+                        <tr>
                             <td>2025/11/11</td>
                             <td>きのこカンファレンス2026のティザーサイトを公開しました。</td>
                         </tr>
