セクションタイトルと募集文の修正

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,8 @@
                 </div>
             </section>
             <section id="sponsor" class="sponsor">
-                <h3>スポンサー募集</h3>
+                <h3>スポンサー</h3>
+                <p style="text-align: center; font-size: 1.8em; font-weight: bold; margin-top: 10px; margin-bottom: 20px;">スポンサー絶賛募集中！</p>
                 <p class="about-text" style="text-align: center;">
                     きのこカンファレンス2026では、本カンファレンスの趣旨にご賛同いただけるスポンサー企業様を募集しております。<br>
                     スポンサーシップを通じて、エンジニアコミュニティの発展と次世代のエンジニア育成にご協力いただける企業様のご支援をお待ちしております。<br><br>
