プロポーザル募集開始のお知らせ追加

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
                     <li><a href="#theme">テーマ</a></li>
                     <li><a href="#news">お知らせ</a></li>
                     <li><a href="#schedule">開催日程</a></li>
+                    <li><a href="#cfp">CFP</a></li>
                     <li><a href="#sponsor">スポンサー</a></li>
                     <li><a href="#about">概要</a></li>
                     <li><a href="#details">詳細</a></li>
@@ -104,6 +105,10 @@
                 <table>
                     <tbody>
                         <tr>
+                            <td>2026/01/23</td>
+                            <td>プロポーザル募集を開始しました。詳細は<a href="#cfp">こちら</a>をご覧ください。</td>
+                        </tr>
+                        <tr>
                             <td>2026/01/13</td>
                             <td>スポンサー募集を開始しました。詳細は<a href="#sponsor">こちら</a>をご覧ください。</td>
                         </tr>
@@ -130,6 +135,23 @@
                         <span>2026年6月28日(日)</span>
                     </div>
                 </div>
+            </section>
+            <section id="cfp">
+                <h3>プロポーザル募集</h3>
+                <p style="text-align: center; font-size: 1.8em; font-weight: bold; margin-top: 10px; margin-bottom: 20px;">スピーカー募集中！！</p>
+                <p class="about-text" style="text-align: center;">
+                    きのこカンファレンス2026のプロポーザル募集を開始しました。<br>
+                    40歳以上のエンジニアの皆様からのご応募をお待ちしております。<br><br>
+                    応募の詳細に関しては、下記のプロポーザル募集のお知らせをご参照ください。<br><br>
+                    <a href="https://note.com/preview/nb62a7a2d1a57?prev_access_key=64a2484fba9385ba78775155b3432086"
+                       target="_blank"
+                       rel="noreferrer noopener"
+                       class="button button-secondary">プロポーザル募集のお知らせ</a>
+                    <a href="https://fortee.jp/kinoko-2026/speaker/proposal/cfp"
+                       target="_blank"
+                       rel="noreferrer noopener"
+                       class="button button-primary">プロポーザルご応募はこちら</a>
+                </p>
             </section>
             <section id="sponsor" class="sponsor">
                 <h3>スポンサー</h3>
