スポンサー募集開始のお知らせ更新

--- a/public/index.html
+++ b/public/index.html
@@ -105,12 +105,16 @@
                 <table>
                     <tbody>
                         <tr>
+                            <td>2026/02/03</td>
+                            <td>スポンサー募集を開始しました。詳細は<a href="#sponsor">こちら</a>をご覧ください。</td>
+                        </tr>
+                        <tr>
                             <td>2026/01/23</td>
                             <td>プロポーザル募集を開始しました。詳細は<a href="#cfp">こちら</a>をご覧ください。</td>
                         </tr>
                         <tr>
                             <td>2026/01/13</td>
-                            <td>スポンサー募集を開始しました。詳細は<a href="#sponsor">こちら</a>をご覧ください。</td>
+                            <td>スポンサーメニューを公開しました。</td>
                         </tr>
                         <tr>
                             <td>2025/12/05</td>
