スポンサー募集フォームの追加

--- a/public/index.html
+++ b/public/index.html
@@ -165,8 +165,9 @@
                     スポンサーシップを通じて、エンジニアコミュニティの発展と次世代のエンジニア育成にご協力いただける企業様のご支援をお待ちしております。<br><br>
                     スポンサープランの詳細や特典内容につきましては、スポンサーメニューをご確認ください。<br>
                     ご不明な点やご相談がございましたら、お気軽にお問い合わせください。<br><br>
-                    <a href="https://note.com/honchang/n/n050d3acd4429" target="_blank" rel="noreferrer noopener" class="theme-link">スポンサー募集の詳細はこちら</a><br>
-                    <a href="https://fortee.jp/kinoko-2026/go/sponsor-menu" target="_blank" rel="noreferrer noopener" class="theme-link">スポンサーメニューはこちら</a>
+                    <a href="https://note.com/honchang/n/n050d3acd4429" target="_blank" rel="noreferrer noopener" class="button button-secondary">スポンサー募集の詳細はこちら</a>
+                    <a href="https://fortee.jp/kinoko-2026/go/sponsor-menu" target="_blank" rel="noreferrer noopener" class="button button-secondary">スポンサーメニューはこちら</a>
+                    <a href="https://fortee.jp/kinoko-2026/sponsor/form" target="_blank" rel="noreferrer noopener" class="button button-primary">スポンサー応募フォーム</a>
                 </p>
             </section>
             <section id="about">
